k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting
  labels:
    app: greeting
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greeting
  template:
    metadata:
      labels:
        app: greeting
    spec:
      containers:
      - name: greeting
        image: greeting:0591820
        # imagePullPolicy: Never
        ports:
        - containerPort: 8080
