k8s/service.yaml
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: greeting
spec:
  selector:
    app: greeting
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
