k8s/greeting.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeting
  labels:
    app: greeting
spec:
  replicas: 3
  selector:
    matchLabels:
      app: greeting
  template:
    metadata:
      labels:
        app: greeting
    spec:
      containers:
      - name: greeting
        image: greeting:0591820
        # imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
apiVersion: v1
metadata:
  name: greeting
spec:
  selector:
    app: greeting
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: greeting-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: greeting
          servicePort: 8080
